--- a/src/js/panels-ui/treeView/treeView.css
+++ b/src/js/panels-ui/treeView/treeView.css
@@ -8,7 +8,7 @@ ul.treeView ul li {
         position: relative;
 }
 ul.treeView {
-  padding-left: 1em;
+  /*padding-left: 1em;*/
 }
 
 ul.treeView ul {
