--- a/src/editor-css/ui.fontawesome.css
+++ b/src/editor-css/ui.fontawesome.css
@@ -1,9 +1,9 @@
 i.uiFontAwesomeButton.fa {
-
 }
 
 i.uiFontAwesomeButton.fa:hover {
-	background-color: #444;
+	background-color: #ccc;
+	color: #444;
 	cursor: pointer;
-	border-radius: 0.15em;
+	border-radius: 0.2em;
 }
