--- a/src/editor-css/ui.fontawesome.css
+++ b/src/editor-css/ui.fontawesome.css
@@ -3,7 +3,7 @@ i.uiFontAwesomeButton.fa {
 
 i.uiFontAwesomeButton.fa:hover {
 	background-color: #ccc;
+	border-radius: 75%;	
 	color: #444;
 	cursor: pointer;
-	border-radius: 0.2em;
 }
