--- a/src/css/panel.css
+++ b/src/css/panel.css
@@ -122,6 +122,7 @@ body {
 	position:absolute;
 	left:0;
 	top:0;
+	width: 300px;
 	right:50%;
 	bottom:0;
 	overflow:auto;
@@ -130,6 +131,7 @@ body {
 #editPanel, #rightSidebar {
 	position:absolute;
 	left:50%;
+	width: 300px;
 	top:0;
 	right:0;
 	bottom:0;
